WebCore/html/canvas/WebGLBuffer.h
@@ -51,6 +51,12 @@ namespace WebCore {
         unsigned byteLength(unsigned long target) const;
         const WebGLArrayBuffer* elementArrayBuffer() const { return m_elementArrayBuffer.get(); }
                         
+        // Gets the cached max index for the given type. Returns -1 if
+        // none has been set.
+        long getCachedMaxIndex(unsigned long type);
+        // Sets the cached max index for the given type.
+        void setCachedMaxIndex(unsigned long type, long value);
+
     protected:
         WebGLBuffer(WebGLRenderingContext*);
         WebGLBuffer(WebGLRenderingContext*, Platform3DObject obj);
@@ -62,6 +68,26 @@ namespace WebCore {
         unsigned m_elementArrayBufferByteLength;
         unsigned m_arrayBufferByteLength;
         bool m_elementArrayBufferCloned;
+
+        // Optimization for index validation. For each type of index
+        // (i.e., UNSIGNED_SHORT), cache the maximum index in the
+        // entire buffer.
+        // 
+        // This is sufficient to eliminate a lot of work upon each
+        // draw call as long as all bound array buffers are at least
+        // that size.
+        struct MaxIndexCacheEntry {
+            unsigned long type;
+            long maxIndex;
+        };
+        // OpenGL ES 2.0 only has two valid index types (UNSIGNED_BYTE
+        // and UNSIGNED_SHORT), but might as well leave open the
+        // possibility of adding others.
+        MaxIndexCacheEntry m_maxIndexCache[4];
+        unsigned m_nextAvailableCacheEntry;
+
+        // Clears all of the cached max indices.
+        void clearCachedMaxIndices();
     };
     
 } // namespace WebCore
